S5 nested both h1 and p in a header element

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>teaShop</title>
 </head>
 <body>
+<header>
     <h1>Wes Tea Shop</h1>
     <p>Serving since 2022</p>
-
+</header>
 </body>
 </html>
