S7 added section 1 and 2 with commnents

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <p>Serving since 2022</p>
 </header>
 <main>
-    
+    <!--Section 1  -->
+    <section></section>
+    <!-- Secton 2 -->
+    <section></section>
 </main>
 </body>
 </html>
