S8 added h2 element in section 1  with text tea

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </header>
 <main>
     <!--Section 1  -->
-    <section></section>
+    <section>
+        <h2>tea</h2>
+    </section>
     <!-- Secton 2 -->
     <section></section>
 </main>
