S9 embed style tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="keywords" content="teaShop, TeaStore, MilkTea">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>teaShop</title>
+    <style>
+        
+    </style>
 </head>
 <body>
 <header>
@@ -15,7 +18,7 @@
 <main>
     <!--Section 1  -->
     <section>
-        <h2>tea</h2>
+        <h2>Tea</h2>
     </section>
     <!-- Secton 2 -->
     <section></section>
