--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>teaShop</title>
     <style>
-        
+        h1 {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
