--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
         h1 {
             text-align: center;
         }
+        h2{
+            text-align: center;
+        }
+        p{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
