--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="keywords" content="teaShop, TeaStore, MilkTea">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>teaShop</title>
     <style>
-        h1, h2, p {
+        /* h1, h2, p {
             text-align: center;
-        }
+        } */
        
     </style>
 </head>
