S17 Nest all elements inside body div

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </style>
 </head>
 <body>
+    <div>
 <header>
     <h1>Wes Tea Shop</h1>
     <p>Serving since 2022</p>
@@ -27,5 +28,6 @@
     <!-- Secton 2 -->
     <section></section>
 </main>
+    </div>
 </body>
 </html>
