--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <div>
+    <div class="teaMenu">
 <header>
     <h1>Wes Tea Shop</h1>
     <p>Serving since 2022</p>
