S25 add Article Element with 2 p elements and peso html entity

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     <!--Section 1  -->
     <section>
         <h2>Tea</h2>
+        <article>
+            <p>
+             Aloe Tea
+            </p>
+            <p>
+            &#x20B1; 82.00
+            </p>
+        </article>
     </section>
     <!-- Secton 2 -->
     <section></section>
