--- a/index.html
+++ b/index.html
@@ -32,6 +32,38 @@
             &#x20B1; 82.00
             </p>
         </article>
+        <article>
+            <p>
+             Aloe Flower Tea
+            </p>
+            <p>
+            &#x20B1; 77.00
+            </p>
+        </article>
+        <article>
+            <p>
+             Assam Black Tea
+            </p>
+            <p>
+            &#x20B1; 110.00
+            </p>
+        </article>
+        <article>
+            <p>
+             Broken Orange Pekoe
+            </p>
+            <p>
+            &#x20B1; 83.00
+            </p>
+        </article>
+        <article>
+            <p>
+             Bitter Buckhwheate
+            </p>
+            <p>
+            &#x20B1; 109.00
+            </p>
+        </article>
     </section>
     <!-- Secton 2 -->
     <section></section>
