S27  add teatFlavor class to aloe tea name and text align center

--- a/index.html
+++ b/index.html
@@ -25,44 +25,44 @@
     <section>
         <h2>Tea</h2>
         <article>
-            <p>
-             Aloe Tea
-            </p>
-            <p>
-            &#x20B1; 82.00
-            </p>
+                <p class="teaFlavor">
+                Aloe Tea
+                </p>
+                <p>
+                &#x20B1; 82.00
+                </p>
         </article>
         <article>
-            <p>
-             Aloe Flower Tea
-            </p>
-            <p>
-            &#x20B1; 77.00
-            </p>
+                <p>
+                Aloe Flower Tea
+                </p>
+                <p>
+                &#x20B1; 77.00
+                </p>
         </article>
         <article>
-            <p>
-             Assam Black Tea
-            </p>
-            <p>
-            &#x20B1; 110.00
-            </p>
+                <p>
+                Assam Black Tea
+                </p>
+                <p>
+                &#x20B1; 110.00
+                </p>
         </article>
         <article>
-            <p>
-             Broken Orange Pekoe
-            </p>
-            <p>
-            &#x20B1; 83.00
-            </p>
+                <p>
+                Broken Orange Pekoe
+                </p>
+                <p>
+                &#x20B1; 83.00
+                </p>
         </article>
         <article>
-            <p>
-             Bitter Buckhwheate
-            </p>
-            <p>
-            &#x20B1; 109.00
-            </p>
+                <p>
+                Bitter Buckhwheate
+                </p>
+                <p>
+                &#x20B1; 109.00
+                </p>
         </article>
     </section>
     <!-- Secton 2 -->
