--- a/index.html
+++ b/index.html
@@ -16,58 +16,58 @@
 </head>
 <body>
     <div class="teaMenu">
-<header>
-    <h1>Wes Tea Shop</h1>
-    <p>Serving since 2022</p>
-</header>
-<main>
-    <!--Section 1  -->
-    <section>
-        <h2>Tea</h2>
-        <article>
-                <p class="teaFlavor">
-                Aloe Tea
-                </p>
-                <p>
-                &#x20B1; 82.00
-                </p>
-        </article>
-        <article>
-                <p>
-                Aloe Flower Tea
-                </p>
-                <p>
-                &#x20B1; 77.00
-                </p>
-        </article>
-        <article>
-                <p>
-                Assam Black Tea
-                </p>
-                <p>
-                &#x20B1; 110.00
-                </p>
-        </article>
-        <article>
-                <p>
-                Broken Orange Pekoe
-                </p>
-                <p>
-                &#x20B1; 83.00
-                </p>
-        </article>
-        <article>
-                <p>
-                Bitter Buckhwheate
-                </p>
-                <p>
-                &#x20B1; 109.00
-                </p>
-        </article>
-    </section>
-    <!-- Secton 2 -->
-    <section></section>
-</main>
+        <header>
+            <h1>Wes Tea Shop</h1>
+            <p>Serving since 2022</p>
+        </header>
+        <main>
+         <!--Section 1  -->
+         <section>
+            <h2>Tea</h2>
+            <article>
+                    <p class="teaFlavor">
+                    Aloe Tea
+                    </p>
+                    <p class="teaPrice">
+                    &#x20B1; 82.00
+                    </p>
+            </article>
+            <article>
+                    <p>
+                    Aloe Flower Tea
+                    </p>
+                    <p>
+                    &#x20B1; 77.00
+                    </p>
+            </article>
+            <article>
+                    <p>
+                    Assam Black Tea
+                    </p>
+                    <p>
+                    &#x20B1; 110.00
+                    </p>
+            </article>
+            <article>
+                    <p>
+                    Broken Orange Pekoe
+                    </p>
+                    <p>
+                    &#x20B1; 83.00
+                    </p>
+            </article>
+            <article>
+                    <p>
+                    Bitter Buckhwheate
+                    </p>
+                    <p>
+                    &#x20B1; 109.00
+                    </p>
+            </article>
+         </section>
+            <!-- Secton 2 -->
+            <section></section>
+     </main>
     </div>
 </body>
 </html>
