S30 added class name teaItem to first Article Element and change to display block

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          <!--Section 1  -->
          <section>
             <h2>Tea</h2>
-            <article>
+            <article class="teaItem">
                     <p class="teaFlavor">
                     Aloe Tea
                     </p>
