S32 add 49% to teaFlavor and teaPrice

--- a/index.html
+++ b/index.html
@@ -28,12 +28,7 @@
                     <p class="teaFlavor">Aloe Tea</p><p class="teaPrice">&#x20B1; 82.00</p>
             </article>
             <article>
-                    <p>
-                    Aloe Flower Tea
-                    </p>
-                    <p>
-                    &#x20B1; 77.00
-                    </p>
+                    <p>Aloe Flower Tea</p><p>&#x20B1; 77.00</p>
             </article>
             <article>
                     <p>
