S35 added tea price and aline all p class in all article

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                     <p class="teaFlavor">Aloe Tea</p><p class="teaPrice">&#x20B1; 82.00</p>
             </article>
             <article class="teaItem">
-                    <p class="teaFlavor">Aloe Flower Tea</p><p>&#x20B1; 77.00</p>
+                    <p class="teaFlavor">Aloe Flower Tea</p><p class="teaPrice">&#x20B1; 77.00</p>
             </article>
             <article class="teaItem">
-                    <p class="teaFlavor">Assam Black Tea</p><p>&#x20B1; 110.00</p>
+                    <p class="teaFlavor">Assam Black Tea</p><p class="teaPrice">&#x20B1; 110.00</p>
             </article>
             <article class="teaItem">
-                    <p class="teaFlavor">Broken Orange Pekoe</p><p>&#x20B1; 83.00</p>
+                    <p class="teaFlavor">Broken Orange Pekoe</p><p class="teaPrice">&#x20B1; 83.00</p>
             </article>
             <article class="teaItem">
-                    <p class="teaFlavor">Bitter Buckhwheate</p><p>&#x20B1; 109.00</p>
+                    <p class="teaFlavor">Bitter Buckhwheate</p><p class="teaPrice">&#x20B1; 109.00</p>
             </article>
          </section>
             <!-- Secton 2 -->
