S42 add class name tea collection and tea collectionPrice

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
             </article>
          </section>
             <!-- Secton 2 -->
-            <section></section>
+            <section>
+                <h2>Tea Collection</h2>
+                <p class="teaCollection">Black Tea</p><p class="collectionPrice">&#x20B1; 221.00</p>
+            </section>
      </main>
     </div>
 </body>
