S43 add 3 more articles fo tea collections

--- a/index.html
+++ b/index.html
@@ -47,7 +47,19 @@
             <!-- Secton 2 -->
             <section>
                 <h2>Tea Collection</h2>
+                <article>
                 <p class="teaCollection">Black Tea</p><p class="collectionPrice">&#x20B1; 221.00</p>
+                </article>
+                <article>
+                    <p class="teaCollection">Green Tea</p><p class="collectionPrice">&#x20B1; 96.00</p>
+                </article>
+                <article>
+                    <p class="teaCollection">Oolong Tea</p><p class="collectionPrice">&#x20B1; 120.00</p>
+                </article>
+                <article>
+                    <p class="teaCollection">Puerth Tea</p><p class="collectionPrice">&#x20B1; 130.00</p>
+                    </article>
+
             </section>
      </main>
     </div>
