S44 added calss tea item in the articles

--- a/index.html
+++ b/index.html
@@ -25,42 +25,43 @@
             <p>Serving since 2022</p>
         </header>
         <main>
-         <!--Section 1  -->
+         <!--*************************Section 1*************************  -->
          <section>
-            <h2>Tea</h2>
-            <article class="teaItem">
-                    <p class="teaFlavor">Aloe Tea</p><p class="teaPrice">&#x20B1; 82.00</p>
-            </article>
-            <article class="teaItem">
-                    <p class="teaFlavor">Aloe Flower Tea</p><p class="teaPrice">&#x20B1; 77.00</p>
-            </article>
-            <article class="teaItem">
-                    <p class="teaFlavor">Assam Black Tea</p><p class="teaPrice">&#x20B1; 110.00</p>
-            </article>
-            <article class="teaItem">
-                    <p class="teaFlavor">Broken Orange Pekoe</p><p class="teaPrice">&#x20B1; 83.00</p>
-            </article>
-            <article class="teaItem">
-                    <p class="teaFlavor">Bitter Buckhwheate</p><p class="teaPrice">&#x20B1; 109.00</p>
-            </article>
+                <h2>Tea</h2>
+                <article class="teaItem">
+                        <p class="teaFlavor">Aloe Tea</p><p class="teaPrice">&#x20B1; 82.00</p>
+                </article>
+                <article class="teaItem">
+                        <p class="teaFlavor">Aloe Flower Tea</p><p class="teaPrice">&#x20B1; 77.00</p>
+                </article>
+                <article class="teaItem">
+                        <p class="teaFlavor">Assam Black Tea</p><p class="teaPrice">&#x20B1; 110.00</p>
+                </article>
+                <article class="teaItem">
+                        <p class="teaFlavor">Broken Orange Pekoe</p><p class="teaPrice">&#x20B1; 83.00</p>
+                </article>
+                <article class="teaItem">
+                        <p class="teaFlavor">Bitter Buckhwheate</p><p class="teaPrice">&#x20B1; 109.00</p>
+                </article>
          </section>
-            <!-- Secton 2 -->
+            <!-- **********************Secton 2*************************** -->
             <section>
                 <h2>Tea Collection</h2>
-                <article>
-                <p class="teaCollection">Black Tea</p><p class="collectionPrice">&#x20B1; 221.00</p>
+                <article class="teaItem">
+                        <p class="teaCollection">Black Tea</p><p class="collectionPrice">&#x20B1; 221.00</p>
                 </article>
-                <article>
-                    <p class="teaCollection">Green Tea</p><p class="collectionPrice">&#x20B1; 96.00</p>
+                <article class="teaItem">
+                        <p class="teaCollection">Green Tea</p><p class="collectionPrice">&#x20B1; 96.00</p>
                 </article>
-                <article>
-                    <p class="teaCollection">Oolong Tea</p><p class="collectionPrice">&#x20B1; 120.00</p>
+                <article class="teaItem">
+                        <p class="teaCollection">Oolong Tea</p><p class="collectionPrice">&#x20B1; 120.00</p>
                 </article>
-                <article>
-                    <p class="teaCollection">Puerth Tea</p><p class="collectionPrice">&#x20B1; 130.00</p>
-                    </article>
+                <article class="teaItem">
+                        <p class="teaCollection">Puerth Tea</p><p class="collectionPrice">&#x20B1; 130.00</p>
+                </article>
 
             </section>
+            
      </main>
     </div>
 </body>
