--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="teaMenu">
         <header>
             <h1>Wes Tea Shop</h1>
-            <p>Serving since 2022</p>
+            <p class="established">Serving since 2022</p>
         </header>
         <main>
          <!--*************************Section 1*************************  -->
