S47 adding footer and 2 p elements

--- a/index.html
+++ b/index.html
@@ -64,5 +64,8 @@
             
      </main>
     </div>
+    <footer><p>Visit Our Website</p>
+              <p>Bulacan</p>
+        </footer>
 </body>
 </html>
